manifests/addons/keycloak/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-keycloak
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "keycloak.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-keycloak
  namespace: default
spec:
  hosts:
  - "keycloak.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-keycloak
  http:
  - name: 'keycloak-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: keycloak
